# Mushroom_Classification_Fork

./: .coverage  .gitignore  LICENSE  Makefile  README.md  Report.md  TODO.md  cloudbuild.yaml  data.dvc  environment.yml  mushroom.dockerfile  predict.dockerfile  pyproject.toml  requirements.txt  requirements_test.txt  requirements_tests.txt  setup.py
.dvc/: config
.github/workflows/: isort.yml  tests.yaml  tests.yml
.github_notdone/workflows/: codecov.yaml  docker.yaml  tests.yaml
.hydra/: config.yaml  hydra.yaml
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: events.out.tfevents.1718321499.2100b3d208bf.16689.0
lightning_logs/version_1/: events.out.tfevents.1718322599.2100b3d208bf.21250.0
lightning_logs/version_10/: events.out.tfevents.1718325403.2100b3d208bf.33059.0
lightning_logs/version_11/: events.out.tfevents.1718326660.2100b3d208bf.38326.0
lightning_logs/version_12/: events.out.tfevents.1718326953.2100b3d208bf.39560.0
lightning_logs/version_13/: events.out.tfevents.1718327254.2100b3d208bf.40818.0
lightning_logs/version_14/: events.out.tfevents.1718327491.2100b3d208bf.41814.0
lightning_logs/version_15/: events.out.tfevents.1718328607.2100b3d208bf.51150.0
lightning_logs/version_17/: hparams.yaml  (+1 more)
mushroom_classification/: __init__.py
outputs/: metrics.csv  predictions.npy  true_labels.npy
reports/: README.md  class_index.html  function_index.html  index.html
src/: predict_model.py  run_train_scripts.sh  sweep.yaml  train_model.py
tests/: test_data_preparation.py  test_make_dataset.py  test_model.py  test_predict_model.py  test_train_model.py  test_visualize.py
(+37 files in other folders)
