[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mushroom_classification"
version = "0.1.0"
description = "image classfication for 9 mushrooms"
authors = [
  { name = "Carson", email = "Carson.Zhang@campus.lmu.de" },
  { name = "Yina", email = "Yina.Yao@campus.lmu.de" },
  { name = "Ziming", email = "Ziming.Zhong@campus.lmu.de" },
  { name = "Ziyu", email = "Mu.Ziyu@campus.lmu.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mushroom_classification"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_test.txt']}

[tool.ruff]
line-length = 120
